fix(post): increase z-index of fullscreen ide
The search bar filter actions button was being rendered on top of it.

--- a/app/assets/stylesheets/elements/_ide.scss
+++ b/app/assets/stylesheets/elements/_ide.scss
@@ -9,7 +9,7 @@
     height: 100%;
     width: 100%;
     margin-top: 0;
-    z-index: 10;
+    z-index: 100;
   }
 }
 
